Keyboard interaction styles

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,600&display=swap');
+@font-face {
+    font-family: 'Work Sans';
+    src: url(./assets/fonts/WorkSans-VariableFont_wght.ttf);
+}
 
 /* reset */
 *,
@@ -54,9 +57,9 @@ h1 {
 
 li {
     display: grid;
+    position: relative;
     grid-template-rows: auto 0fr;
     transition: grid-template-rows 500ms;
-    border-bottom: thin solid var(--light-pink);
 }
 
 li:last-of-type {
@@ -81,10 +84,23 @@ button {
     transition: color .5s ease;
 }
 
+li:not(li:first-of-type):after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 1px;
+    background-color: var(--light-pink);
+}
+
 button:focus-visible {
     outline: medium solid var(--grayish-purple);
     background-color: var(--light-pink);
     border-radius: .5rem;
+    margin-bottom: 1rem;
 }
 
 button:hover {
@@ -127,12 +143,14 @@ li:has(h2>button[aria-expanded="true"]) {
     main {
         width: 90%;
         max-width: 30.25rem;
-        padding: 2rem;
+        padding: 1rem;
         padding-block-end: 0;
     }
 
     h1 {
         font-size: 2.75rem;
+        padding: 1rem;
+        padding-block-end: 0;
         margin-block-end: .27rem;
     }
 
@@ -141,14 +159,21 @@ li:has(h2>button[aria-expanded="true"]) {
         min-width: 2.25rem;
     }
 
+    li:not(li:first-of-type):after {
+        width: calc(100% - 2rem);
+        margin-inline-start: 1rem;
+    }
+
     button {
         background-size: 1.75rem;
+        background-position: calc(100% - 1rem) center;
         padding-right: 2.25rem;
         font-size: .9rem;
+        padding-inline: 1rem 2.5rem;
     }
 
     p {
         font-size: .8rem;
+        padding-inline: 1rem;
     }
-
 }
